feat: finishing tugas 2

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,9 +4,9 @@
         <title>ZERO E-Commerce</title>
         <style>
             .product {
-                flex: auto;
+                display: flex;
                 flex-direction: column;
-                justify-items: center;
+                justify-content: center;
                 align-items: center;
             }
         </style>
