feat: Tugas 4 Done

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,6 +15,12 @@
         <button>Add product</button>
     </a>
 
+    <a href="{% url 'main:logout' %}">
+        <button>Logout</button>
+    </a>
+
+    <h5>Sesi terakhir login: {{ last_login }}</h5>
+
     {% if not product %}
         <p>No product displayed yet.</p>
     {% else %}
