--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,32 +1,81 @@
 {% extends 'base.html' %}
+{% load form_tags %}
+{% load static %}
 
 {% block meta %}
 <title>Login</title>
 {% endblock meta %}
 
 {% block content %}
-<div class="login">
-  <h1>Login</h1>
+<div class="w-screen h-screen bg-background relative flex items-center justify-center">
+  <div class="w-screen h-screen flex flex-col justify-between absolute left-0 top-0 z-0">
+    <div class="flex flex-row justify-between">
+      <p class="font-lora p-4 text-2xl text-logo-primary font-semibold">Zero</p>
+      <div class="w-[25rem] h-[22rem] bg-backgroundSecondary rounded-bl-full shadow-[-100px_10px_50px_100px] shadow-backgroundSecondary"></div>
+    </div>
+    <div class="flex flex-row">
+      <div class="w-[17rem] h-[14rem] bg-backgroundSecondary rounded-tr-full shadow-[50px_10px_50px_100px] shadow-backgroundSecondary"></div>
+      <div></div>
+    </div>
+  </div>
+  <div class="relative z-10 bg-base-white w-[52rem] h-[35rem] font-poppins flex flex-row p-6 rounded-3xl shadow-xl shadow-backgroundSecondary">
+    <div class="bg-base-white h-full w-7/12 rounded-l-2xl relative">
+      <div class="bg-background h-full w-[78%] rounded-2xl"></div>
+      <img src="{% static 'images/login_doodle.png' %}" alt="login_doodle" class="absolute top-0 left-0 w-full h-full object-cover rounded-2xl" />
+    </div>
 
-  <form method="POST" action="">
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td></td>
-        <td><input class="btn login_btn" type="submit" value="Login" /></td>
-      </tr>
-    </table>
-  </form>
+    <div class="gap-10 flex flex-col justify-center items-center">
+      <h1 class="text-2xl font-black">Login</h1>
+  
+      <form method="POST" action="" class="w-full max-w-sm">
+        {% csrf_token %}
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-1" for="username">
+            Username
+          </label>
+          <div class="relative focus-within:text-yellow-300">
+            <i class="fa fa-regular fa-user absolute inset-y-0 left-0 flex items-center pl-2"></i>
+            <span class="absolute inset-y-0 left-0 flex items-center pl-6 text-gray-300">|</span>
+            {{ form.username|add_class:"shadow appearance-none border rounded-lg w-full py-1.5 px-2 pl-8 text-gray-700 leading-tight focus:outline-yellow-300 focus:bg-yellow-50 focus:bg-opacity-50" }}
+          </div>
+          {% if form.username.errors %}
+          <p class="text-red-500 text-xs italic">{{ form.username.errors }}</p>
+          {% endif %}
+        </div>
+        <div class="mb-6">
+          <label class="block text-gray-700 text-sm font-bold mb-1" for="password">
+            Password
+          </label>
+          <div class="relative focus-within:text-yellow-300">
+            <i class="fa fa-solid fa-lock absolute inset-y-0 left-0 flex items-center pl-2"></i>
+            <span class="absolute inset-y-0 left-0 flex items-center pl-6 text-gray-300">|</span>
+            {{ form.password|add_class:"shadow appearance-none border rounded-lg w-full py-1.5 px-2 pl-8 text-gray-700 leading-tight focus:outline-yellow-300 focus:bg-yellow-50 focus:bg-opacity-50" }}
+          </div>
+          {% if form.password.errors %}
+          <p class="text-red-500 text-xs italic">{{ form.password.errors }}</p>
+          {% endif %}
+        </div>
+        <div class="flex items-center justify-between mt-12">
+            <button class="w-full bg-red-400 text-base-white text-sm py-2 rounded-lg hover:bg-red-500 transition-all duration-75" type="submit">
+            Log in
+          </button>
+        </div>
+      </form>
 
-  {% if messages %}
-  <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %} Don't have an account yet?
-  <a href="{% url 'main:register' %}">Register Now</a>
+      {% if messages %}
+      <ul>
+        {% for message in messages %}
+        <li class="{% if message.tags == 'success' %}text-green-500{% else %}text-red-500{% endif %} text-sm">{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
+      <div class="flex flex-row gap-1.5">
+        <span class="text-xs font-semibold">Don't have an account yet?</span>
+        <a href="{% url 'main:register' %}" class="text-xs font-semibold text-gray-500 hover:text-yellow-300 underline">Register Now</a>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock content %}
