--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -21,7 +21,7 @@
   <div class="relative z-10 bg-base-white w-[52rem] h-full lg:h-[35rem] font-poppins flex flex-row p-6 rounded-3xl shadow-xl shadow-backgroundSecondary lg:justify-center justify-normal">
     <div class="bg-base-white h-full w-7/12 rounded-l-2xl relative hidden lg:flex">
       <div class="bg-background h-full w-[78%] rounded-2xl"></div>
-      <img src="{% static 'images/register_doodle.png' %}" alt="register_doodle" class="absolute top-0 left-0 w-full h-full object-cover rounded-2xl" />
+      <img src="{% static 'images/register_doodle.svg' %}" alt="register_doodle" class="absolute top-0 left-0 w-full h-full object-cover rounded-2xl" />
     </div>
 
     <div class="gap-6 flex flex-col justify-center items-center w-full lg:w-80 relative">
