--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,22 +1,39 @@
 {% extends 'base.html' %}
-
 {% load static %}
+{% load form_tags %}
 
 {% block content %}
-
-<h1>Edit Mood</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Edit Mood"/>
-            </td>
-        </tr>
-    </table>
-</form>
-
-{% endblock %}
+<div class="h-screen flex items-center justify-center bg-gradient-to-tr from-background via-[#f5ccd4] to-[#ffe3fe] py-20 font-poppins relative">
+    <a href="{% url 'main:show_main' %}">
+        <div class="absolute ml-4 top-4 w-10 h-10 rounded-full flex justify-center items-center hover:bg-slate-200 hover:bg-opacity-50 transition-all duration-150">
+            <i class="fa fa-solid fa-arrow-left"></i>
+        </div>
+    </a>
+    <div class="w-full max-w-2xl shadow-lg rounded-lg p-8 bg-gray-100">
+        <h2 class="text-2xl font-bold text-[#180e4c] mb-6 text-center">Edit Product</h2>
+        <form method="POST" class="space-y-4">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="space-y-2">
+                    <label for="{{ field.id_for_label }}" class="block text-sm font-semibold text-[#180e4c]">
+                        {{ field.label }}
+                    </label>
+                    <div class="w-full">
+                        {{ field|add_class:"shadow appearance-none border rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" }}
+                    </div>
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <p class="text-red-500 text-xs italic">{{ error }}</p>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <div class="pt-4">
+                <button type="submit" class="w-full border border-text-primary bg-[#ffe8e1] hover:bg-transparent text-text-primary py-2 px-4 rounded-lg transition duration-300">
+                    Edit Product
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+{% endblock content %}
