--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,25 +1,195 @@
 {% extends "base.html" %}
 {% block content %}
 {% include 'navbar.html' %}
-<div class="flex flex-col max-w-screen min-h-full pt-20 bg-gradient-to-tr from-background via-[#f5ccd4] to-[#ffe3fe] cursor-default">
-    <a href="{% url 'main:create_product' %}" class="m-4 font-poppins hover:underline w-max rounded-2xl text-text-primary shadow-md hover:text-text-primary hover:bg-white transition-all duration-300 px-2 py-1">
+<div
+    class="flex flex-col max-w-screen min-h-full pt-20 bg-gradient-to-tr from-background via-[#f5ccd4] to-[#ffe3fe] cursor-default">
+    <a href="{% url 'main:create_product' %}"
+        class="m-4 font-poppins hover:underline w-max rounded-2xl text-text-primary shadow-md hover:text-text-primary hover:bg-white transition-all duration-300 px-2 py-1">
         <button>Add product</button>
     </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal"
+        class="m-4 font-poppins hover:underline w-max rounded-2xl text-text-primary shadow-md hover:text-text-primary hover:bg-white transition-all duration-300 px-2 py-1"
+        onclick="openModal()">
+        Add Product by AJAX
+    </button>
 
     <div class="w-full min-h-screen p-8">
-        {% if not product %}
-        <div class="flex flex-col justify-center items-center w-full h-full">
-            <p>No product displayed yet.</p>
-            <img src="/static/images/sedih_banget.png" alt="sedih_banget" class="w-32 h-32">
+        <div id="product_cards"></div>
+
+        <div id="crudModal" tabindex="-1" aria-hidden="true"
+            class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+            <div id="crudModalContent"
+                class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+                <!-- Modal header -->
+                <div class="flex items-center justify-between p-4 border-b rounded-t">
+                    <h3 class="text-xl font-semibold text-gray-900">
+                        Add New Product
+                    </h3>
+                    <button type="button"
+                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
+                        id="closeModalBtn">
+                        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
+                <!-- Modal body -->
+                <div class="px-6 py-4 space-y-6 form-style">
+                    <div id="error-message" class="hidden text-red-500 text-sm"></div>
+                    <form id="productForm">
+                        <div class="mb-4">
+                            <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                            <input type="text" id="name" name="name"
+                                class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+                                placeholder="Enter product name" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="price" class="block text-sm font-medium text-gray-700">Price</label>
+                            <input type="number" id="price" name="price"
+                                class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+                                required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+                            <textarea id="description" name="description" rows="3"
+                                class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+                                placeholder="Describe your product" required></textarea>
+                        </div>
+                        <div class="mb-4">
+                            <label for="stock" class="block text-sm font-medium text-gray-700">Stock</label>
+                            <input type="number" id="stock" name="stock"
+                                class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700"
+                                required>
+                        </div>
+                    </form>
+                </div>
+                <!-- Modal footer -->
+                <div
+                    class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+                    <button type="button"
+                        class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg"
+                        id="cancelButton">Cancel</button>
+                    <button type="submit" id="submitProduct" form="productForm"
+                        class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+                </div>
+            </div>
         </div>
-        {% else %}
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-            {% for item in product %}
-                {% include 'card_product.html' with item=item %}
-            {% endfor %}
-        </div>
-        {% endif %}
     </div>
 </div>
 
+<script>
+    async function getProducts() {
+        return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+    }
+
+    async function refreshProducts() {
+        document.getElementById("product_cards").innerHTML = "";
+        document.getElementById("product_cards").className = "";
+        const products = await getProducts();
+        let htmlString = "";
+        let classNameString = "";
+
+        if (products.length === 0) {
+            htmlString = `
+                <div class="flex flex-col justify-center items-center w-full h-full">
+                    <p>No product displayed yet.</p>
+                    <img src="/static/images/sedih_banget.png" alt="sedih_banget" class="w-32 h-32">
+                </div>
+            `;
+        } else {
+            classNameString = "grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4";
+            products.forEach((item) => {
+                htmlString += `
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs w-full">
+                        <img src="https://images.unsplash.com/photo-1504198458649-3128b932f49e?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="${item.fields.name}" class="w-full h-48 object-cover">
+                        <div class="p-4">
+                            <h2 class="text-xl font-semibold text-gray-800 mb-2">${item.fields.name}</h2>
+                            <p class="text-green-600 font-bold text-lg mb-2">$${item.fields.price}</p>
+                            <p class="text-gray-600 text-sm mb-4">${item.fields.description}</p>
+                            <p class="text-sm text-gray-500 mb-2">In stock: ${item.fields.stock}</p>
+                            <div class="flex justify-between">
+                                <a href="/edit-product/${item.pk}" class="bg-background text-gray-600 px-6 flex justify-center items-center rounded hover:bg-backgroundSecondary transition duration-300 font-poppins">Edit</a>
+                                <a href="/delete/${item.pk}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition duration-300 font-poppins">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            });
+        }
+        document.getElementById("product_cards").className = classNameString;
+        document.getElementById("product_cards").innerHTML = htmlString;
+    }
+
+    refreshProducts();
+
+    const modal = document.getElementById('crudModal');
+    const modalContent = document.getElementById('crudModalContent');
+    const closeModalBtn = document.getElementById('closeModalBtn');
+    const cancelButton = document.getElementById('cancelButton');
+
+    function openModal() {
+        modal.classList.remove('hidden');
+        setTimeout(() => {
+            modalContent.classList.remove('scale-95', 'opacity-0');
+        }, 10);
+    }
+
+    function showError(message) {
+        const errorDiv = document.getElementById('error-message');
+        errorDiv.innerText = message;
+        errorDiv.classList.remove('hidden');
+    }
+
+    function clearError() {
+        const errorDiv = document.getElementById('error-message');
+        errorDiv.innerText = '';
+        errorDiv.classList.add('hidden');
+    }
+
+    function closeModal() {
+        modalContent.classList.add('scale-95', 'opacity-0');
+        setTimeout(() => {
+            modal.classList.add('hidden');
+        }, 300);
+    }
+
+    closeModalBtn.addEventListener('click', closeModal);
+    cancelButton.addEventListener('click', closeModal);
+
+    function addProduct() {
+        fetch("{% url 'main:add_product_ajax' %}", {
+            method: "POST",
+            body: new FormData(document.querySelector('#productForm')),
+        })
+        .then(response => {
+            if (!response.ok) {
+                return response.text().then(text => { throw new Error(text) });
+            }
+            return response.json();
+        })
+        .then(data => {
+            if (data.status === 'CREATED') {
+                refreshProducts();
+                clearError();
+                closeModal();
+            }
+        })
+        .catch(error => {
+            showError(error.message);
+        });
+
+        document.getElementById("productForm").reset();
+        document.querySelector("[data-modal-toggle='crudModal']").click();
+        return false;
+    }
+
+    document.getElementById("productForm").addEventListener("submit", (e) => {
+        e.preventDefault();
+        addProduct();
+    })
+</script>
 {% endblock content %}
